--- a/scss/main.scss
+++ b/scss/main.scss
@@ -78,12 +78,12 @@ body {
       height: 48px;
       position: absolute;
       left: 0;
-      top: 3px;
+      top: 0;
       background-size: cover;
     }
   }
   & p {
-    margin: 0 0 1em 0;
+    margin: 0;
   }
   & strong {
     color: var(--dark-blue);
